--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,8 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
+,
+    "src/mixins/TagHelper"
   ],
   "exclude": [
     "node_modules"
