--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
-    "dayjs": "^1.11.3",
-    "file-loader": "^6.2.0",
+    "dayjs": "^1.8.20",
+    "echarts": "^4.8.0",
     "register-service-worker": "^1.6.2",
-    "url-loader": "^4.1.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
@@ -21,6 +20,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@types/echarts": "^4.6.3",
     "@types/jest": "^24.0.19",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
